--- a/build.gradle
+++ b/build.gradle
@@ -16,10 +16,16 @@ buildscript {
     }
 }
 
-apply plugin: 'kotlin'
-apply plugin: 'application'
+plugins {
+    id 'java'
+}
 
-defaultTasks 'run'
+group 'moshikotlinexample'
+version '1.0-SNAPSHOT'
+
+apply plugin: 'kotlin'
+
+sourceCompatibility = 1.8
 
 repositories {
     jcenter()
@@ -37,6 +43,9 @@ dependencies {
     testImplementation "org.amshove.kluent:kluent:$kluentVersion"
 }
 
-task wrapper(type: Wrapper) {
-    gradleVersion = "4.1"
+compileKotlin {
+    kotlinOptions.jvmTarget = "1.8"
+}
+compileTestKotlin {
+    kotlinOptions.jvmTarget = "1.8"
 }
