--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
     ext {
         junitVersion = "4.12"
         kluentVersion = "1.30"
-        kotlinVersion = "1.1.51"
+        kotlinVersion = "1.2.50"
         moshiVersion = "1.5.0"
     }
 
@@ -17,13 +17,13 @@ buildscript {
 }
 
 plugins {
-    id 'java'
+    id "java"
 }
 
-group 'moshikotlinexample'
-version '1.0-SNAPSHOT'
+group "moshikotlinexample"
+version "1.0-SNAPSHOT"
 
-apply plugin: 'kotlin'
+apply plugin: "kotlin"
 
 sourceCompatibility = 1.8
 
